# yale_chemistry_for_pc

./: .gitignore  README.md  add_c_nmr_bins.py  an2014_nmr.py  analyze_sweep.py  benchmark_functional_groups.py  build_dict_codes.py  build_dict_codes_torch.py  build_nmrexp_corpus.py  compare_dict_accuracy.py  create_features_nmr.ipynb  create_nmr_dictionary_features.py  cross_dataset_gap.py  fav.json  fav_w1.json  feature_comparison.ipynb  initial_prop_analysis.ipynb  main.py  ml_workflow.ipynb  plot_nmf_components.py  plot_nmf_reconstruction.py  pyproject.toml  reproduce_sweep_trial.py  simple_mlp_attempt.py  sweep_pretrain_transfer.py  train_gap_from_dict.py  train_gap_model.py  tune_gap_model.py  tune_nmf_representation.ipynb  tune_representation.py
Depreciated/: apply_10k_nmf_to_1k.py  compare_smiles_pkl.py  create_all_rdkit_features.py  create_rdkit_features.py  merge_gaussian_ids.py  merge_gaussian_nmr.py  very_parallel_rdkit.py
Visualization/: eval_an2014_mlr_transfer.py  interpret_nmr_motifs.py  plot_aromatic_nmr.py  plot_nmf_components.py  plot_rdkit_features.ipynb
docker/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml
nmrlib/: __init__.py  data.py  features.py  metrics.py  models.py  torch_nmf.py
